backport to 1.16.5 (#45)